<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Filter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="352dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_change">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/gender_choose"
                android:textSize="20sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/gender_choose2"
                android:textSize="20sp"
                android:visibility="visible" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/minage"
            android:layout_width="50dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/minage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toMax"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/maxage"
            android:layout_width="50dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/maxage"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="250dp"
            android:id="@+id/city"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Clear"/>

    <Button
        android:id="@+id/apply"
        android:layout_marginTop="-48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/apply"/>
</LinearLayout>