<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.scotch.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.project.scotch.ui.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.project.scotch.ui.FavouriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.project.scotch.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>