<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleProfile"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/akronim"
        android:text="@string/titleProfile"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="64dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="150dp"
            android:text="@string/SignIn_Text"
            android:textSize="50sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/loginField"
            android:layout_width="347dp"
            android:layout_height="77dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login"
            android:inputType="text"
            android:text="@string/SignIn_login"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_baseColor="@color/black"
            app:met_errorColor="#D53C68"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#31E6A7"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordField"
            android:layout_width="347dp"
            android:layout_height="77dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@string/SignIn_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_baseColor="@color/black"
            app:met_errorColor="#D53C68"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#31E6A7"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="146dp"
            android:layout_height="52dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="52dp"
            android:text="@string/SignIn_Button" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="115dp"
            android:layout_height="22dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="16dp"
            android:text="@string/link" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>