<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/loginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/login"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="25"
                app:met_minCharacters="3"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginField"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="100"
                app:met_minCharacters="6"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                android:inputType="none"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordField"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true">
            </com.rengwuxian.materialedittext.MaterialEditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/age"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameField">
            </TextView>

            <Spinner
                android:id="@+id/age"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:scrollbarSize="6dp"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/nameField">
            </Spinner>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:scrollbarSize="6dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cityField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/city"
                android:inputType="none"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true">
            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text="@string/phone_text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityField"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true">
            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/aboutField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/about"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneField"
                app:met_baseColor="#0056d3"
                app:met_errorColor="#D53C68"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="150"
                app:met_primaryColor="#31E6A7"
                app:met_singleLineEllipsis="true">
            </com.rengwuxian.materialedittext.MaterialEditText>

            <Button
                android:id="@+id/OK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="81dp"
                android:fontFamily="@font/baloo_bhaijaan"
                android:text="@string/OK"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/standart_photo" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="26dp"
                android:fontFamily="@font/baloo_bhaijaan"
                android:text="@string/Cancel"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/OK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/standart_photo" />

            <ImageView
                android:id="@+id/standart_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:srcCompat="@drawable/profile_photo" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/select_photo"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutField" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>